--- a/.github/workflows/builddeploy.yaml
+++ b/.github/workflows/builddeploy.yaml
@@ -35,6 +35,12 @@ jobs:
      uses: actions/checkout@v4
    - name: executebuild repository
      run: "exucutingbuild"
+ artifact:
+  needs: build
+  runs-on: ubuthu-latest
+  steps:
+   - name: "exucutingartifact"
+     run: "exucutingartifact"
  deploy:
   needs: build
   if: ${{ github.event.inputs.dev == 'true' }}
