--- a/.github/workflows/builddeploy.yaml
+++ b/.github/workflows/builddeploy.yaml
@@ -1,74 +1,70 @@
 name: build and deploy
 on:
- workflow_dispatch:
+  workflow_dispatch:
     inputs:
       dev:
         description: 'Run Stage 1'
         required: true
         default: 'true'
         type: choice
-        options:
-          - 'true'
-          - 'false'
+        options: ['true', 'false']
       stage:
         description: 'Run Stage 2'
         required: true
         default: 'false'
         type: choice
-        options:
-          - 'true'
-          - 'false'
-      prod-dr:
+        options: ['true', 'false']
+      prod_dr:
         description: 'Run Stage 3'
         required: true
         default: 'true'
         type: choice
-        options:
-          - 'true'
-          - 'false'
+        options: ['true', 'false']
 
 jobs:
- build:
-  runs-on: ubuthu-latest
-  steps:
-   - name: checkout repository
-     uses: actions/checkout@v4
-   - name: executebuild repository
-     run: "exucutingbuild"
- artifact:
-  needs: build
-  runs-on: ubuthu-latest
-  steps:
-   - name: "exucutingartifact"
-     run: "exucutingartifact"
- deploy:
-  needs: build
-  if: ${{ github.event.inputs.dev == 'true' }}
-  runs-on: ubuthu-latest
-  steps:
-   - name: "exucutingdeploy"
-     run: "exucutingdeploy"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
+      - name: build repository
+        run: echo "executing build"
 
-deploy-test:
-  needs: artifact
-  if: ${{ github.event.inputs.stage == 'true' }}
-  runs-on: ubuthu-latest
-  steps:
-   - name: "exucutingdeploy"
-     run: "exucutingdeploy"
+  artifact:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: "executing artifact"
+        run: echo "executing artifact"
 
-deploy-prod:
-  needs: artifact
-  if: ${{ github.event.inputs.prod_dr == 'true' }}
-  runs-on: ubuthu-latest
-  steps:
-   - name: "exucutingdeploy"
-     run: "exucutingdeploy"
+  deploy:
+    needs: build
+    if: ${{ github.event.inputs.dev == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: "executing deploy"
+        run: echo "executing deploy"
 
-deploy-dr:
-  needs: artifact
-  if: ${{ github.event.inputs.prod_dr == 'true' }}
-  runs-on: ubuthu-latest
-  steps:
-   - name: "exucutingdeploy"
-     run: "exucutingdeploy"
+  deploy-test:
+    needs: artifact
+    if: ${{ github.event.inputs.stage == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: "executing deploy"
+        run: echo "executing deploy"
+
+  deploy-prod:
+    needs: artifact
+    if: ${{ github.event.inputs.prod_dr == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: "executing deploy"
+        run: echo "executing deploy"
+
+  deploy-dr:
+    needs: artifact
+    if: ${{ github.event.inputs.prod_dr == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: "executing deploy"
+        run: echo "executing deploy"
